--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     </licenses>
 
     <organization>
-        <name>OpenNARS</name>
-        <url>http://OpenNARS.org</url>
+        <name>OpenNARS</name>Github
+        <url>http://OpenNARS.org</url>Http://www.github.com
     </organization>
 
     <scm>
