--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ jacoco**
 
 
 /nbproject/yjp-build-impl.xml
-/yjp-build.xml# Useful examples
+/yjp-build.xml# Michael maindal jensen
 # https://github.com/github/gitignore
 
 # OS X
